--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.10",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@monaco-editor/react": "^4.6.0",
+    "@mui/material": "^5.15.3",
+    "@uiw/codemirror-theme-aura": "^4.21.21",
+    "@uiw/codemirror-theme-dracula": "^4.21.21",
+    "@uiw/codemirror-theme-vscode": "^4.21.21",
+    "@uiw/codemirror-theme-xcode": "^4.21.21",
+    "@uiw/codemirror-themes": "^4.21.21",
+    "@uiw/react-codemirror": "^4.19.16",
+    "axios": "^1.6.5",
+    "codemirror6-themes": "^0.1.2",
     "firebase": "^10.7.1",
     "monaco-themes": "^0.4.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.12.0",
+    "react-select": "^5.8.0",
+    "react-split": "^2.0.14",
     "react-toastify": "^9.1.3",
     "uuid": "^9.0.1"
   },
